<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="256dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints"
        app:cardBackgroundColor="#F5F5F5">

        <LinearLayout
            android:id="@+id/planViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/planImage"
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:background="@color/lavender"
                android:contentDescription="@string/planImage"
                app:srcCompat="@drawable/place_default"
                />

            <TextView
                android:id="@+id/cardPlanName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plan_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/cardDestinations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:hint="@string/destinations"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/dateAndDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cardDateRange"
                    android:layout_width="227dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/date_range"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/cardDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/deleteImage"
                    app:srcCompat="@drawable/delete"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/cardCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/copy"
                    android:contentDescription="@string/copy_plan"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>